Enable CI to test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,9 @@ name: Meson CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - build_tests
   pull_request:
     branches: [ master ]
 
